gcc-14.2.0/gcc/testsuite/gdc.test/runnable/extra-files/minimal/object.d
version https://git-lfs.github.com/spec/v1
oid sha256:39318abce84ea0e2034c7f557e4b3ef3ca9dff0e3c4a7111b331bbbfb5c51951
size 82
